Responded to Ranjith's feedback

--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -406,3 +406,14 @@
   url = {https://dev.px4.io/en/middleware/drivers.html},
   urldate = {2017-10-24}
 }
+
+
+@online{mfb,
+  url = {http://www.mfb.vic.gov.au/About-Us/About-the-MFB.html},
+  urldate = {2017-10-24}
+}
+
+@online{mfb_drone,
+  url = {http://www.mfb.vic.gov.au/News/Aerial-fire-fighting-tool-takes-off.html},
+  urldate = {2017-10-24}
+}
