--- a/introduction.tex
+++ b/introduction.tex
@@ -5,11 +5,11 @@
 \section{Overview and background}
 
 \subsection{Motivation of problem}
-The Metropolitan Fire Brigade (MFB) provides fire and emergency services to almost three million Melbourne residents in the metropolitan district.  Although primarily known for dealing with fires, their roles and responsibilities extend to other emergencies including chemical spillages, car crashes, hostage situations and post fire investigations.\\
+The Metropolitan Fire Brigade (MFB) provides fire and emergency services to almost three million Melbourne residents in the metropolitan district \cite{mfb}.  Although primarily known for dealing with fires, their roles and responsibilities extend to other emergencies including chemical spillages, car crashes, hostage situations and post fire investigations.\\
 
 A common theme amongst these scenarios is the expectation for firefighters to enter adverse conditions where they have little or no prior knowledge. Examples of this may include; smoke filled environments (low visibility), entering structurally unsound areas, locating and extinguishing small fires, responding to chemical spillages without knowledge of the contents or taming fires that may have toxic smoke.\\
 
-One avenue that the MFB has begun exploring is drone technology.  In particular, off the shelf DJI drones fitted with thermal and visible light cameras have been providing the MFB with a birds eye perspective of response scenes. This use of technology is a significant advantage over traditional ladder platforms that are limited by their observation height and do not carry the required sensors for thermal and plume analysis. During its pilot program, their drones have been successfully deployed in a number emergency situations. A few examples are given below:
+One avenue that the MFB has begun exploring is drone technology.  In particular, off the shelf DJI drones fitted with thermal and visible light cameras have been providing the MFB with a birds eye perspective of response scenes \cite{mfb_drone}. This use of technology is a significant advantage over traditional ladder platforms that are limited by their observation height and do not carry the required sensors for thermal and plume analysis. During its pilot program, their drones have been successfully deployed in a number emergency situations. A few examples are given below:
 \begin{enumerate}
     \item \textbf{Coolaroo Recycling Plant}: A recycling plant in Melbourne's Northern suburbs caught fire releasing toxic smoke ultimately resulting in the evacuation of 100 residents.
     \item \textbf{Citylink Truck Accident}: One incident on Melbourne's Citylink saw a truck crash into a brige in a way that part of it was obscured from view. A drone provided images to examine vehicle before removal.
