--- a/designdevelopment.tex
+++ b/designdevelopment.tex
@@ -328,7 +328,7 @@ This may be seen as a minor drawback, since ArduPilot obviously supports GPS inp
 The other drawback to ArduPilot is that our team were unable to get a reliable simulation working using the ArduPilot codebase. Simulation of the system will be discussed further in this report; however suffice to say that simulation is a critical aspect of the development of URSA without risking damage to expensive hardware in real flights.
 
 \subsubsection{PX4}
-PX4 footnote{\url{http://px4.io/}} was specifically created to address ArduPilot's lack of support for more research oriented flight platforms. It was also felt that ArduPilot was constrained by its requirement to support some older AVR based hardware, which meant that it could not move towards a more modern middleware based communications layer. PX4 is by design more modular than ArduPilot, leveraging a messaging architecture between different nodes. This modular design is valuable for URSA, since it allows us to develop or modify only the components which are relevant to us. An overview of the PX4 software achitecture is shown at Figure \ref{fig:PX4Arch}.\\
+PX4 \footnote{\url{http://px4.io/}} was specifically created to address ArduPilot's lack of support for more research oriented flight platforms. It was also felt that ArduPilot was constrained by its requirement to support some older AVR based hardware, which meant that it could not move towards a more modern middleware based communications layer. PX4 is by design more modular than ArduPilot, leveraging a messaging architecture between different nodes. This modular design is valuable for URSA, since it allows us to develop or modify only the components which are relevant to us. An overview of the PX4 software achitecture is shown at Figure \ref{fig:PX4Arch}.\\
 
 In Figure \ref{fig:PX4Arch}, the blue arrows indicate communications which are managed by the messaging layer (known as `uORB'). The abbreviations UART, CAN and PWM refer to embedded systems protocols which can be used to send data to actuators. For URSA, we actually used a PWM chip which was integrated to PX4 using an inter-integrated circuit (I2C) driver we were required to write. I2C is an alternative embedded systems communication protocol. This is discussed further in the following chapter.\\
 
