--- a/litreview.tex
+++ b/litreview.tex
@@ -20,6 +20,8 @@ Specifically in the field of emergency systems, Researchers at Carnegie Mellon \
 
 An alternative solution to indoor monitoring of fire has been proposed in \cite{myeong} which developed a drone capable of mounting walls.  The ability to mount walls allows for a larger drone platform capable of carrying heavier laser scanning modules (accurate position estimation) but also the flexibility of passing through doorways vertically.  The team also showed their drone was capable of withstanding temperatures of up to 1000$^\circ C$ for 60 seconds.\\
 
+During our review of the literature relating to complete systems, we encountered numerous references to the Robot Operating System. This is a platform for integrating distributed algorithms in robotics, and is discussed further in the following Chapter on design decisions.
+
 \section{Estimation algorithms}
 In addition to having application in indoor flight systems, algorithms which jointly optimise over both a position and map configuration have a wide variety of additional applications. For this reason, the literature relating to Simultaneous Localization and Mapping (SLAM) algorithms includes many non-UAV applications. The motivation behind using such an algorithm is explained in the following chapter. This section discusses some of the variants for solving the SLAM problem in the literature.\\
 
@@ -28,7 +30,7 @@ While we did not write code to implement a SLAM algorithm for this project, the 
 \subsection{Filter based SLAM}
 The first detailed outline of the SLAM problem was \cite{smithcheese}. In this work, the authors used a filtering based approach with a state vector representing the current robot position, along with the position of a number of `landmarks'. A linear observation was approximated, allowing a Kalman Filter to be employed to recursively estimate the state.\\
 
-The extraction of landmarks will depend on the sensors used. For example, if a monocular vision sensor is used, landmarks may be extracted using a Harris corner/edge detector\footnote{A Harris detector works by calculating the sum of the squared difference between each pixel in an image and its surrounding pixels. The result of this sum-of-squared difference (obtained by approximation) is then analyzed for spatial derivatives in $x$ and $y$ directions. High derivatives in both directions indicate an image corner; high derivatives in a single direction indicate an image edge. See \cite{harris}}. If a depth camera is employed, features may instead relate to the 3D structure of the environment measured. The most important aspect of landmarks is that they can be correlated between samples, and recognised as unique if they are revisited in the future.
+The extraction of landmarks will depend on the sensors used. For example, if a monocular vision sensor is used, landmarks may be extracted using a Harris corner/edge detector\footnote{A Harris detector works by calculating the sum of the squared difference between each pixel in an image and its surrounding pixels. The result of this sum-of-squared difference (obtained by approximation) is then analyzed for spatial derivatives in $x$ and $y$ directions. High derivatives in both directions indicate an image corner; high derivatives in a single direction indicate an image edge. See \cite{harris}}. If a depth camera is employed, features may instead relate to the 3D structure of the environment measured. The most important aspect of landmarks is that they can be correlated between samples, and recognised as unique if they are revisited in the future.\\
 
 There have been a number of improvements in filter based approaches over the years. More complex non-linear observation models have led to filters which are required to linearize around operating points, leading to the application of extended Kalman filters (EKF). A guide on the implementation of EKF based SLAM, including a detailed treatment of models and states used, and relevant diagrams, can be found at \cite{ekftutorial}.\\ 
 
