--- a/results.tex
+++ b/results.tex
@@ -52,7 +52,7 @@ Figure \ref{fig:map_env_RVIZ} shows the 2D map output constructed from sequentia
     \label{fig:map_env_RVIZ}
 \end{figure}
 
-The results show that there is only a $2cm$ discrepancy between those measurements obtained by hand and those by laser.  The accuracy of a tape measure is with $\pm \frac{1}{2}$ the smallest measurement unit (1cm), therefore this can partly explain for the difference in measurements.  However, as the intended use of the map is high-level strategic planning a $2cm$ accuracy meets the project objective. \\
+The results show that there is only a $\pm \SI{2}{\centi\metre}$ discrepancy between those measurements obtained by hand and those by laser.  The accuracy of a tape measure is with $\pm \frac{1}{2}$ the smallest measurement unit (1cm), therefore this can partly explain for the difference in measurements.  As the intended use of the map is for high-level strategic planning in emergency situations, a $\pm \SI{2}{\centi\metre}$ accuracy meets the project objective. \\
 
 \begin{table}[H]
 \centering
