--- a/capstone_report.tex
+++ b/capstone_report.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{report}
-\title{Capstone Project - RR4-IP \\Unmanned Recon and Surveillance Aircraft (U.R.S.A.) \\ \Huge Draft Report}
+\title{Capstone Project - RR4-IP \\Unmanned Recon and Surveillance Aircraft (U.R.S.A.) \\ \Huge Final Report}
 \author{\large Lachlan Dowling - 682434 \\ Isaac Hook - 720679 \\ Hao Tang - 640207 }
 \date{2017}
 \setlength\parindent{0pt}
@@ -8,6 +8,7 @@
 \usepackage{xr}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{array}
 \renewcommand{\arraystretch}{1.5}
 \usepackage{bm}
 \usepackage{graphicx}
@@ -34,10 +35,11 @@
 \usepackage{subfiles}
 \usepackage{setspace}
 \usepackage[americancurrents, americanvoltages,siunitx]{circuitikz}
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 \pagestyle{fancy}
 \fancyhf{}
 \lhead{Capstone Project}
-\rhead{Draft Report: RR4-IP}
+\rhead{Final Report: RR4-IP}
 \rfoot{Page \thepage}
 \DeclareSIUnit\dBm{dBm}
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{\node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
@@ -115,21 +117,30 @@
 \bibliography{capstone_bib}{}
 \bibliographystyle{IEEEtran}
 
-% \appendix
-% \appendixpage
-% \chapter{Bill of Materials}
-% \includepdf[pages=-]{appendices/bom.pdf}
-% \chapter{BCM2835 ARM Peripherals datasheet}
-% \includepdf[pages=-]{appendices/BCM2835-ARM-Peripherals.pdf}
-% \chapter{HC-SR04 datasheet}
-% \includepdf[pages=-]{appendices/HCSR04.pdf}
-% \chapter{PCA9685 datasheet}
-% \includepdf[pages=-]{appendices/PCA9685.pdf}
-% \chapter{MS5611 datasheet}
-% \includepdf[pages=-]{appendices/MS5611.pdf}
-% \chapter{MPU9250 datasheet}
-% \includepdf[pages=-]{appendices/MPU9250.pdf}
-% \chapter{ADS1115 datasheet}
-% \includepdf[pages=-]{appendices/ADS1115.pdf}
+\appendix
+\appendixpage
+Appendices have been provided in a USB drive along with this report. Alternatively, the appendices can be accessed at \url{https://drive.google.com/open?id=0B64fzCinYuhLNW1KeU1kM1B5c0E}. Table \ref{tab:apptable} provides a summary of appendices. Full code developed for PX4 and ROS has not been provided in the appendices due to size constraints but can be accessed at \url{https://github.com/ursa-drone/}.
+
+\begin{table}[H]
+\centering
+    \begin{tabular}{|c|c|}
+        \hline
+        Appendix & Description\\
+        \hline
+        A & BOM \\
+        B & BCM2835 ARM Peripherals datasheet\\
+        C & HC-SR04 datasheet\\
+        D & PCA9685 datasheet\\
+        E & MS5611 datasheet\\
+        F & MPU9250 datasheet\\
+        G & ADS1115 datasheet\\
+        H & MATLAB code written to tune cost functions\\
+        I & Example of URSA team contributing to further PX4 development\\
+        J & Video of flight tests undertaken\\
+        \hline
+    \end{tabular}
+\caption{Summary of appendices \label{tab:apptable}}
+\end{table}
+
 
 \end{document}
