--- a/capstone_report.tex
+++ b/capstone_report.tex
@@ -93,6 +93,7 @@
 \onehalfspacing
 
 \begin{document}
+\includepdf[pages=-]{coversheet.pdf}
 \thispagestyle{empty}
     \maketitle
     \thispagestyle{empty}
@@ -101,7 +102,6 @@
 
     \clearpage
     \setcounter{page}{1}
-
 
 \subfile{abstract.tex}
 \tableofcontents
