--- a/implementation.tex
+++ b/implementation.tex
@@ -857,7 +857,7 @@ Therefore the only free parameters are c, B and $\lambda$.  As c encodes the dis
 
 It should be noted that $d$ is a monotonically decreasing function of $c$, therefore larger distance from obstacles implies a shorter trajectory in our simple single obstacle model. This will not always be the case, but we found that the model provides a good framework for tuning parameters.\\
 
-It is worth noting in Figure \ref{fig:ocf_total_cost} that the lowest cost $c$ for a given $\lambda$ is indicated by the red contour. For very small $\lambda$, the impact of the goal cost function is likely to be small as this function decays so slowly that almost all goals are penalised equally. Therefore the minima is dictated mostly by the obstacle cost function and the solution occurs at higher $c$. Similarly, at very high $\lambda$, the goal cost function decays so quickly to zero that it makes almost no difference to the overall minima, which is again dominated by the obstacle cost. It is only at intermediate values of $\lambda$ that we see this function having any effect at all on the minima of the cost function, and solutions which `cut corners' and reduce $c$ start to be preferred. Note that $\lambda$ is plotted on a logarithmic scale. 
+It is worth noting in Figure \ref{fig:ocf_total_cost} that the $c$ which results in the lowest cost for a given $\lambda$ is indicated by the red contour. For very small $\lambda$, the impact of the goal cost function is likely to be small as this function decays so slowly that almost all goals are penalised equally. Therefore the minima is dictated mostly by the obstacle cost function and the solution occurs at higher $c$. Conversely, at very high $\lambda$, the goal cost function decays so quickly to zero that it makes almost no difference to the overall minima, which is again dominated by the obstacle cost. It is only at intermediate values of $\lambda$ that we see this function having any effect at all on the minima of the cost function, and solutions which `cut corners' and reduce $c$ start to be preferred. Note that $\lambda$ is plotted on a logarithmic scale. 
 
 \begin{figure}[H]
     \centering
